--- a/Frontend/v1/pubspec.yaml
+++ b/Frontend/v1/pubspec.yaml
@@ -1,4 +1,4 @@
-name: v1
+name: ui_design
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,6 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.1
+  google_fonts: ^2.3.1
+  charts_flutter: ^0.12.0
+  data_table_2: ^2.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,8 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # - logos/hplogo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
